# OpenCompany

./: .env.example  .gitignore  AGENTS.md  AGENTS_cn.md  LICENSE  README.md  README_cn.md  opencompany.toml  package-lock.json  package.json  pyproject.toml
.github/workflows/: tests.yml
docs/: README.md  README_cn.md  architecture.md  architecture_cn.md  message_flow.md  message_flow_cn.md  message_stream_map.md  message_stream_map_cn.md  technical_route.md  technical_route_cn.md
docs/modules/: llm_prompts.md  llm_prompts_cn.md  orchestration_pipeline.md  orchestration_pipeline_cn.md  persistence_observability.md  persistence_observability_cn.md  runtime_core.md  runtime_core_cn.md  skills.md  skills_cn.md  testing_debugging.md  testing_debugging_cn.md  tool_runtime.md  tool_runtime_cn.md  ui_surfaces.md  ui_surfaces_cn.md  workspace_sync.md  workspace_sync_cn.md
prompts/: root_coordinator.md  root_coordinator_cn.md  runtime_messages.json  runtime_messages_cn.json  tool_definitions.json  tool_definitions_cn.json  worker.md  worker_cn.md
skills/aiheal-cli-operator/: skill.toml
skills/hf-cli/: SKILL.md  SKILL_cn.md  skill.toml
skills/openai-docs/: SKILL.md  SKILL_cn.md  skill.toml
skills/pdf/: SKILL.md  SKILL_cn.md  skill.toml
skills/skill-creator/: SKILL.md  SKILL_cn.md  skill.toml
skills/skill-installer/: SKILL.md  SKILL_cn.md  skill.toml
src/opencompany/: __init__.py  __main__.py  cli.py  config.py  i18n.py  logging.py  models.py  orchestrator.py  paths.py  prompts.py  protocol.py  remote.py  skills.py  status_machine.py  storage.py  utils.py  (+1 more)
tests/: test_cli.py  test_config.py  test_context_compression.py  test_mcp.py  test_message_cursor.py  test_message_interface_consistency.py  test_messages.py  test_openrouter.py  test_orchestrator.py  test_orchestrator_finish.py  test_orchestrator_loop.py  test_orchestrator_resume.py  test_orchestrator_steer_runs.py  test_orchestrator_tool_runs.py  test_prompts.py  test_remote.py  test_repo_contracts.py  test_sandbox.py  test_sandbox_registry.py  test_skill_scripts.py  test_skills.py  test_storage.py  test_tool_io_contracts.py  test_tool_runtime.py  test_tools.py  test_tui.py  test_webui.py  test_webui_api.py  test_workspace.py  tool_io_contract_records.json
(+37 files in other folders)
