[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opencompany"
version = "0.1.0"
description = "Local-first multi-agent orchestration framework with isolated workspaces and a terminal UI."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "OpenCompany" }
]
dependencies = [
  "httpx>=0.27,<1.0",
  "textual>=0.58,<1.0",
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "websockets>=12,<16"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "ruff>=0.6,<1.0",
  "mypy>=1.11,<2.0"
]

[project.scripts]
opencompany = "opencompany.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
opencompany = ["webui/static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["F821"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
files = [
  "src/opencompany/config.py",
  "src/opencompany/prompts.py",
  "src/opencompany/utils.py",
  "tests/test_repo_contracts.py"
]
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["opencompany.config", "opencompany.utils"]
disable_error_code = ["arg-type"]
